Indexer/Deployment/job_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: index-service
  name: index-service
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    name: http
  selector:
    io.kompose.service: index-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: index-service
  name: index-service
spec:
  selector:
    matchLabels:
      io.kompose.service: index-service
  replicas: 1
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: index-service
    spec:
      serviceAccountName: index-api
      containers:
      - env:
        - name: MONGO_URI
          value: mongodb://mongo:27017
        image: nickipan/indexer-service:latest
        name: index-service
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
status: {}
